# NeuralNetwork-ML

./: .gitignore  1NN  README.md  best_value.json  cupkeras.py  da_eliminare  domiML.py  main.py  metrics.py  monks_train1.csv  pyproject.toml  requirements.txt
datasets/: monks_test2.csv  monks_test3.csv  monks_train2.csv  monks_train3.csv
my_dir/cup_search_v1/: oracle.json
network/: activations.py  layer.py  neuron.py
neural/: activations.py  convergence.py  layer.py  metrics.py  network.py  neuron.py  stopping_criteria.py  utils.py  validation.py
notebooks/: cup.ipynb  monk.ipynb  monk1.ipynb  monk2.ipynb  monk3.ipynb  neuron.ipynb  plots.ipynb  plotting.py
results/: best_cup_curves.json  big_cup.json  blind_cup.csv  cup.csv  cup.json  cup_minmax.json  cup_old.json  monk1.json  monk1_curves.json  monk2.json  monk2_curves.json  monk3.json  monk3_curves.json  monk3_noreg_curves.json  monk3_old.json  sklearn_cup.json  sklearn_cup_predictions.csv  sklearn_monk1.json  stable_cup_curves.json  stable_cup_std_curves.json
results/curves/: cup_0.json  cup_00.json  cup_01.json  cup_02.json  cup_03.json  cup_04.json  cup_05.json  cup_06.json  (+17 more)
scripts/: setup.bat  setup.sh
seminars/: sklearn_classification.ipynb
test/: blind_cup.py  breast_cancer.py  chain.py  cup.py  cup2.py  cup_gs.py  cup_sklearn.py  cup_test.py  cup_validation.py  cupkeras.py  digits.py  keras_sinusoidal.py  layer.py  mnist.py  monk.py  monk_sklearn.py  network.py  neuron.py  poly_regression.py  regression.py  single.py  sinusoidal.py  sklearn_monk.py  torch_sinusoidal.py  validation.py
(+40 files in other folders)
